# jsso

./: .eproject  .gitignore  .golangci.yaml  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  repositories.bzl  update-repos.sh
ci/: build-container.task.yaml  jsso-containers.yaml
cmd/envoy-plugin/: BUILD.bazel  main.go
lib/auth/: BUILD.bazel  auth.go  auth_test.go
lib/authserver/: BUILD.bazel  authserver.go
lib/server/: BUILD.bazel  server.go
try/: envoy.yaml  policy.rego
