load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_atlassian_bazel_tools//golangcilint:def.bzl", "golangcilint")

# gazelle:prefix github.com/jrockway/jsso
gazelle(name = "gazelle")

golangcilint(
    name = "golint",
    config = "//:.golangci.yaml",
    paths = [
        "cmd/...",
        "lib/...",
    ],
    prefix = "github.com/jrockway/jsso",
)
