load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/jrockway/jsso/cmd/envoy-plugin",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/authserver:go_default_library",
        "//lib/server:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/service/auth/v2:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "envoy-plugin",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
