load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/jrockway/jsso/cmd/envoy-plugin",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/auth:go_default_library",
        "//lib/authserver:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/service/auth/v2:go_default_library",
        "@com_github_jrockway_opinionated_server//server:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "envoy-plugin",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "envoy-plugin-image",
    embed = [":go_default_library"],
)
